--- a/asset/style.css
+++ b/asset/style.css
@@ -4,5 +4,43 @@
     padding: 0;
 }
 html {
-    font-size: 62.5%;
+    font-size: 65.2%;
+}
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+body {
+    font-size: 1.3rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header {
+    width: 100%;
+    height: 60px;
+}
+header nav {
+    display: flex;
+    justify-content: flex-end;
+}
+header nav .nav-right-section {
+    width: 250px;
+    height: auto;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+nav .nav-right-section a {
+    margin-right: 10px;
+    color: #000000;
+}
+nav .nav-right-section .menu-icon {
+    background-image: url("https://cdn.iconscout.com/icon/premium/png-256-thumb/menu-1899373-1606812.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
 }
