--- a/asset/style.css
+++ b/asset/style.css
@@ -10,6 +10,9 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+a:hover {
+    text-decoration: underline;
+}
 body {
     font-size: 1.3rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -44,3 +47,4 @@ nav .nav-right-section .menu-icon {
     height: 25px;
     margin-right: 15px;
 }
+/* nav */
